# rust-todo

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  readme.md
.github/workflows/: docker.yml  release.yml
src/: data.rs  main.rs  todo.rs  utils.rs
src/db/: data_repository.rs  database.rs  mod.rs  repository.rs
