[package]
name = "rust-todos"
version = "0.1.3"
edition = "2021"
authors = ["Aidan Wallace <aidanwallacedev@gmail.com>"]
homepage = "https://github.com/aidan-wallace/rust-todos"
repository = "https://github.com/aidan-wallace/rust-todos"
keywords = ["todo","todos", "cli"]
license = "MIT"
readme = "readme.md"
description = "A simple rust cli tool for managing todos"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
dotenv = "0.15.0"
home = "0.5.9"
